--- a/package.json
+++ b/package.json
@@ -2,23 +2,34 @@
   "name": "chutney",
   "version": "0.0.10",
   "description": "An opinionated, yet delicious static site generator.",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "type": "module",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/chalk": "^2.2.0",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.18",
-    "handlebars": "^4.7.7",
-    "rehype-raw": "^6.1.1",
-    "rehype-stringify": "^9.0.3",
-    "remark-gfm": "^3.0.1",
-    "remark-frontmatter": "^4.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-parse-yaml": "^0.0.3",
-    "remark-rehype": "^10.1.0",
-    "typescript": "^4.5.4",
-    "unified": "^10.1.1",
-    "vite": "^2.8.0"
+    "@types/sinon": "^10.0.6",
+    "@types/yargs": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "mocha": "^9.2.1",
+    "nock": "^13.2.4",
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
+    "sinon": "^13.0.1",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --build tsconfig.json",
+    "coverage": "nyc npm run test",
+    "lint": "eslint ./src --ext .ts && prettier --config .prettierrc src/*.ts src/**/*.ts --write",
+    "test": "mocha -r ts-node/register tests/*test.ts tests/**/*test.ts --insect"
   },
   "repository": {
     "type": "git",
@@ -33,5 +44,15 @@
   "bugs": {
     "url": "https://github.com/builders-club/chutney/issues"
   },
-  "homepage": "https://github.com/builders-club/chutney#readme"
+  "homepage": "https://github.com/builders-club/chutney#readme",
+  "dependencies": {
+    "handlebars": "^4.7.7",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.1"
+  }
 }
