Added layout support and prepared the way for sitemap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
   },
   "include": [
     "src",
-    "webpack.config.js"
+    "webpack.config.js",   
+    "types/remark-parse-yaml.d.ts"
   ],
   "exclude": [
     "node_modules",
