--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
+    "remark-parse-yaml": "^0.0.3",
     "remark-rehype": "^10.1.0",
     "unified": "^10.1.1"
   },
